# quickgpt-app

./: LICENSE  README.md  package-lock.json  package.json
src/: index.html  main.js  splash.html
src-tauri/: Cargo.toml  main.wxs  tauri.conf.json
src-tauri/src/: com.rs  configuration.rs  main.rs
